Divisão do formularios

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-number-format": "^5.4.3",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0"
